--- a/views/error.ejs
+++ b/views/error.ejs
@@ -25,7 +25,7 @@
 
       <article>
         <p>
-            <p>Really sorry for the inconvenience caused, please try again</p>
+            <p>Really sorry for the inconvenience caused, please try again!!</p>
          
         </p>
         
