--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     
     <link rel="stylesheet" href="css/nav.css">
-    <title>Shortify</title>
+    <title>tinyFy</title>
     
 </head>
 <body>
