--- a/views/output.ejs
+++ b/views/output.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Token</title>
     
     <link rel="stylesheet" href="css/about.css">
 
@@ -26,7 +26,7 @@
       <article>
         <p>Wow your token is generated please note it down: <b> <%=text%></b></p>
         <h2>How to use this token?</h2>
-        <p>Just type in  <a href="./<%=text%>"><b>  <%=text%></b> </a>  in your browser url and hit enter </p>
+        <p>Just type /<a href="./<%=text%>"><b>  <%=text%></b> </a> after domain name in your browser url and hit enter </p>
         
              </article>
 </section>
