--- a/views/about.ejs
+++ b/views/about.ejs
@@ -24,17 +24,18 @@
       <section>
 
       <article>
-        <p>It is an exhibition project  for shortnening URL,while taking care of scalibility and distribution and correctness </p>
+        <p>It is an exhibition project for shortening URLs while taking care of scalability, distribution, and correctness
+        </p>
       
         <h1>Technology used</h1>
         <p>
-            <a href="https://nodejs.dev/learn/making-http-requests-with-nodejs">Nodejs </a> along with <a href="https://expressjs.com/">Express</a> was used for server side programming.
+            <a href="https://nodejs.dev/learn/making-http-requests-with-nodejs">Node.js </a> along with <a href="https://expressjs.com/">ExpressJs</a> was used for server-side programming.
         </p>
         <h1>Databases and caching</h1>
-        <p><a href="https://www.mongodb.com/cloud/atlas/lp/try2-in?utm_source=google&utm_campaign=gs_apac_india_search_brand_atlas_desktop&utm_term=mongdb&utm_medium=cpc_paid_search&utm_ad=e&utm_ad_campaign_id=6501677905&gclid=Cj0KCQjwqp-LBhDQARIsAO0a6aJ91fAlhdY1xO9HkYWK_PUSCLsd9QYDHk6vbcjVti-DvC9W7zh8s8QaAhy4EALw_wcB">MongoDB</a>(No Sql) is used as database for this project
-    along with <a href="https://redis.io/">Redis</a> for caching. Caching helped to improve query results upto 10 times for small databases however it can improve querying complexity even by 1000 times in case of big databses.    
+        <p><a href="https://www.mongodb.com/cloud/atlas">MongoDB</a>(No SQL) is used as database for this project
+    along with <a href="https://redis.io/">Redis</a> for caching. Caching helped to improve query results up to 10 times for small databases however it can improve querying complexity even by 1000 times in the case of big databases.    
     <h1>Approach and future plans</h1>
-    <p>Currently it is working on  non linear counter based approach however in future  <a href="https://zookeeper.apache.org/">Zookeeper</a> will be implmented to make it scalable and distributed</p>
+    <p>Currently, it is working on nonlinear counter-based approach however in the future <a href="https://zookeeper.apache.org/">Zookeeper</a> will be implemented to make it scalable and distributed</p>
 </p>
         
               </article>
