--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
 <div class="Form">
     <form action="" method="post">
         <div class="main">
-        <input type="url" name="url" id="" required>
+        <input type="url" name="url" id="" placeholder="Enter a URL to short" required>
       
         <button id="submit">Tinyfy</button>
         </div>
