--- a/views/output.ejs
+++ b/views/output.ejs
@@ -27,7 +27,7 @@
       <article>
         <p>Wow your token is generated please note it down: <b> <%=text%></b></p>
         <h2>How to use this token?</h2>
-        <p>Just type in  <a href="./<%=text%>"><b> https://tinyfy-shashank.herokuapp.com/ <%=text%></b> </a>   in your browser url and hit enter </p>
+        <p>Just type in  <a href="./<%=text%>"><b> <%=domain%>/<%=text%></b> </a>   in your browser url and hit enter </p>
         
              </article>
 </section>
